<resources>
    <string name="app_name">CardsGame</string>
    <string name="player_a_name">You</string>
    <string name="initial_score_str">-</string>
    <string name="player_b_name">Droid</string>
    <string name="gameTitle">War</string>
    <string name="play">Play</string>
    <string name="game_finished">Game finished</string>
    <string name="new_game">New Game</string>
    <string name="winner_theWinner">The winner is:</string>
    <string name="tie_message">It\'s a Tie</string>
    <string name="game_WAV_blip">https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg</string>
    <string name="winner_WAV_applause">https://actions.google.com/sounds/v1/crowds/battle_crowd_celebrate_stutter.ogg</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
</resources>